Implementation: Backend: Implement Group Management and Data Model